# internal/docs/swagger.json
@@ -43,7 +43,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/bind.BodyMatter"
+                            "$ref": "#/definitions/bind.BodyFastFile"
                         }
                     }
                 ],
@@ -79,7 +79,7 @@
                         ]
                     }
                 ],
-                "description": "创建文件,用于快速上传",
+                "description": "上传文件",
                 "consumes": [
                     "application/json"
                 ],
@@ -89,43 +89,8 @@
                 "tags": [
                     "Matters"
                 ],
-                "summary": "创建文件",
+                "summary": "上传文件",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "name": "dir",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "fid",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
-                        "name": "is_dir",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "signature",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "size",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "type",
-                        "in": "query"
-                    },
                     {
                         "type": "file",
                         "description": "文件",
@@ -158,7 +123,7 @@
         },
         "/memo": {
             "get": {
-                "description": "查找Memo",
+                "description": "备份",
                 "consumes": [
                     "application/json"
                 ],
@@ -168,7 +133,7 @@
                 "tags": [
                     "Memo"
                 ],
-                "summary": "查找Memo",
+                "summary": "备份",
                 "parameters": [
                     {
                         "type": "string",
@@ -1642,18 +1607,9 @@
         }
     },
     "definitions": {
-        "bind.BodyMatter": {
+        "bind.BodyFastFile": {
             "type": "object",
             "properties": {
-                "dir": {
-                    "type": "string"
-                },
-                "fid": {
-                    "type": "integer"
-                },
-                "is_dir": {
-                    "type": "boolean"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -1662,9 +1618,6 @@
                 },
                 "size": {
                     "type": "integer"
-                },
-                "type": {
-                    "type": "string"
                 }
             }
         },
